--- a/shopWebPage.html
+++ b/shopWebPage.html
@@ -9,6 +9,52 @@
     <title>1001 Wonderful Things</title>
 </head>
 <body>
-    <h1>1001 Wonderful Things</h1>
+    <header>
+        <h1>1001 Wonderful Things</h1>
+    </header>
+
+    <main>
+        <table>
+            <tr>
+                <th>Image</th>
+                <th>Title</th>
+                <th>Description</th>
+                <th>Price</th>
+            </tr>
+            <tr>
+                <td><img src="https://images-na.ssl-images-amazon.com/images/I/51KKR5uGn6L._AC_UL906_SR906,600_.jpg" alt=""> </td>
+                <td class='title'><a href="https://www.amazon.com/fire-tv-stick-with-3rd-gen-alexa-voice-remote/dp/B08C1W5N87/ref=zg_bs_amazon-devices_1/130-9286821-0838256?pd_rd_i=B08C1W5N87&psc=1">Fire TV Stick</a>  </td>
+                <td class='description'>Latest generation of our best-selling Fire TV device - 50% more powerful than the 2nd generation for fast streaming in Full HD. Includes Alexa Voice Remote with power and volume buttons.</td>
+                <td class='price'>24,99$</td>
+            </tr>
+            <tr>
+                <td> <img src="https://images-na.ssl-images-amazon.com/images/I/612KpcXcFBL._AC_UL906_SR906,600_.jpg" alt=""> </td>
+                <td class='title'>Echo Dot (4th Gen)</td>
+                <td class='description'>Meet Echo Dot with clock - Our most popular smart speaker with Alexa. The sleek, compact design delivers crisp vocals and balanced bass for full sound.</td>
+                <td  class='price'>40$</td>
+            </tr>
+            <tr>
+                <td><img src="https://images-na.ssl-images-amazon.com/images/I/41couS+UODL._AC_UL906_SR906,600_.jpg" alt=""></td>
+                <td class='title'>Amazon Smart Plug </td>
+                <td class='description'>Amazon Smart Plug lets you voice control your lights, fans, coffee makers, and more. All you need is an Alexa-enabled device like Echo, Fire TV, Fire tablet, Sonos One, or even just the Alexa app on your phone. </td>
+                <td class='price'>30$</td>
+            </tr>
+            <tr>
+                 <td><img src="https://images-na.ssl-images-amazon.com/images/I/71POuqajw1L._AC_UL906_SR906,600_.jpg" alt=""></td>
+                 <td class='title'>Fire 7 tablet </td>
+                 <td class='description'>Engineered and tested by Amazon, Fire 7 is our best-selling tablet—now 2X the storage, faster quad-core processor, hands-free with Alexa, and 2X as durable as the latest iPad mini.</td>
+                <td class='price'>50$</td>
+            </tr>
+            <tr>
+                <td> <img src="https://images-na.ssl-images-amazon.com/images/I/51u6VxGdpHL._AC_UL906_SR906,600_.jpg" alt=""></td>
+                <td class='title'>Amazon Halo View fitness tracker</td>
+                <td class='description'>More than just counting steps — Access key Halo health metrics like heart rate, Activity points, Sleep score, and on-demand blood oxygen levels on the Halo View color touch display.</td>
+                <td class='price'>34,99$</td>
+            </tr>
+                
+            </tr>
+        </table>
+    </main>
+    
 </body>
 </html>
