--- a/shopWebPage.html
+++ b/shopWebPage.html
@@ -29,25 +29,25 @@
             </tr>
             <tr>
                 <td> <img src="https://images-na.ssl-images-amazon.com/images/I/612KpcXcFBL._AC_UL906_SR906,600_.jpg" alt=""> </td>
-                <td class='title'>Echo Dot (4th Gen)</td>
+                <td class='title'><a href="https://www.amazon.com/All-New-Echo-Dot-4th-Gen/dp/B07XJ8C8F7/ref=zg_bs_amazon-devices_2/130-9286821-0838256?pd_rd_i=B08DLSLCF3&psc=1">Echo Dot (4th Gen)</a> </td>
                 <td class='description'>Meet Echo Dot with clock - Our most popular smart speaker with Alexa. The sleek, compact design delivers crisp vocals and balanced bass for full sound.</td>
                 <td  class='price'>40$</td>
             </tr>
             <tr>
                 <td><img src="https://images-na.ssl-images-amazon.com/images/I/41couS+UODL._AC_UL906_SR906,600_.jpg" alt=""></td>
-                <td class='title'>Amazon Smart Plug </td>
+                <td class='title'><a href="https://www.amazon.com/Amazon-smart-plug-works-with-Alexa/dp/B089DR29T6/ref=zg_bs_amazon-devices_4/130-9286821-0838256?pd_rd_i=B07KTYJ769&psc=1"> Amazon Smart Plug</a> </td>
                 <td class='description'>Amazon Smart Plug lets you voice control your lights, fans, coffee makers, and more. All you need is an Alexa-enabled device like Echo, Fire TV, Fire tablet, Sonos One, or even just the Alexa app on your phone. </td>
                 <td class='price'>30$</td>
             </tr>
             <tr>
                  <td><img src="https://images-na.ssl-images-amazon.com/images/I/71POuqajw1L._AC_UL906_SR906,600_.jpg" alt=""></td>
-                 <td class='title'>Fire 7 tablet </td>
+                 <td class='title'><a href="https://www.amazon.com/Fire-Tablet-7/dp/B07FKR6KXF/ref=zg_bs_amazon-devices_8/130-9286821-0838256?pd_rd_i=B07FKR6KXF&psc=1"> Fire 7 tablet</a>  </td>
                  <td class='description'>Engineered and tested by Amazon, Fire 7 is our best-selling tablet—now 2X the storage, faster quad-core processor, hands-free with Alexa, and 2X as durable as the latest iPad mini.</td>
                 <td class='price'>50$</td>
             </tr>
             <tr>
                 <td> <img src="https://images-na.ssl-images-amazon.com/images/I/51u6VxGdpHL._AC_UL906_SR906,600_.jpg" alt=""></td>
-                <td class='title'>Amazon Halo View fitness tracker</td>
+                <td class='title'><a href="https://www.amazon.com/Amazon-Halo-View-Fitness-Tracker/dp/B08NC1VGQ2/ref=zg_bs_amazon-devices_11/130-9286821-0838256?pd_rd_i=B09DFBR66Y&psc=1"> Amazon Halo View fitness tracker</a></td>
                 <td class='description'>More than just counting steps — Access key Halo health metrics like heart rate, Activity points, Sleep score, and on-demand blood oxygen levels on the Halo View color touch display.</td>
                 <td class='price'>34,99$</td>
             </tr>
